# OrgMind

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  check_query.py  dev.ps1  docker-compose.yml  justfile  pyproject.toml  setup-brain.ps1  setup-local.ps1  test_jl.py
.github/workflows/: cd.yml  ci.yml
docker/: Dockerfile.api  Dockerfile.worker
extensions/project_management/: README.md  __init__.py  agent.py  requirements.txt
extensions/project_management/agent_tools/: __init__.py  action_tools.py  analysis_tools.py  query_tools.py
extensions/project_management/api/: README.md  __init__.py  dashboard.py  nudges.py  projects.py  reports.py  resources.py  router.py  simulation.py  sprints.py  tasks.py
extensions/project_management/config/: link_types.yaml  object_types.yaml  triggers.yaml
extensions/project_management/data/: DEMO_SCENARIOS.md  __init__.py  load_sample_data.py  sample_data.json
extensions/project_management/frontend/: Dockerfile  README.md  index.html
extensions/project_management/schedulers/: __init__.py  base.py  conflict_detector.py  impact_analyzer.py  nudge_generator.py  priority_calculator.py  skill_matcher.py  sprint_planner.py  velocity_calculator.py
extensions/project_management/scripts/: README.md  deploy.sh  load_config.py  setup_pm_assistant.py
extensions/project_management/tests/: __init__.py  conftest.py  pytest.ini  test_api.py  test_config_deployment.py  test_e2e.py  test_performance.py  test_phase3.py  test_schedulers.py
frontend/: jest.config.js  jest.config.ts  jest.setup.js  jest.setup.ts  package-lock.json  package.json
frontend/src/__mocks__/: apiMock.ts  nextMock.ts
frontend/src/app/: layout.tsx  page.tsx
k3d/: config.yaml
k8s/: README.md
k8s/local/: kustomization.yaml
k8s/staging/: api-deployment.yaml  configmap.yaml  indexer-deployment.yaml  ingress.yaml  kustomization.yaml  meilisearch.yaml  minio.yaml  namespace.yaml  nats.yaml  neo4j.yaml  postgres.yaml  pvc.yaml  qdrant.yaml  redis.yaml  secret.yaml  temporal.yaml  worker-deployment.yaml
src/orgmind/: __init__.py
src/orgmind/access_control/: abac.py  models.py  rbac.py
src/orgmind/agents/: __init__.py  basic_tools.py  context.py  llm.py  memory.py  schemas.py  service.py  tools.py
src/orgmind/api/: __init__.py  database.py  dependencies.py  dependencies_auth.py  main.py  schemas.py
src/orgmind/engine/: __init__.py  context_capture.py  correlation_engine.py  decision_tracer.py  digest_engine.py  inference_engine.py  nudge_engine.py  ontology_service.py  query_service.py  suggestion_generator.py
src/orgmind/events/: __init__.py  bus.py  event.py  nats_bus.py  publisher.py  redis_bus.py
src/orgmind/evolution/: ab_testing.py  collectors.py  embedding.py  models.py  patterns.py  policy.py  recommendation.py  scheduler.py  scoring.py
src/orgmind/graph/: __init__.py  neo4j_adapter.py  neo4j_index_worker.py
src/orgmind/platform/: __init__.py  config.py  logging.py
src/orgmind/storage/: __init__.py  base.py  models.py  models_access_control.py  models_audit.py  models_context.py  models_traces.py  postgres_adapter.py
src/orgmind/triggers/: __init__.py  models.py  repository.py  schemas.py  service.py
src/orgmind/workers/: correlation_worker.py  digest_worker.py  health.py  main.py  meili_worker.py  nudge_worker.py  qdrant_worker.py
src/orgmind/workflows/: __init__.py  client.py  worker.py
tests/: conftest.py
tests/integration/: __init__.py  test_actions_flow.py  test_audit_flow.py  test_auth_flow.py  test_context_capture_flow.py  test_decision_trace_flow.py  test_digest_integration.py  test_end_to_end_context.py  test_inference_flow.py  test_nats_event_bus.py  test_neo4j_adapter.py  test_neo4j_sync.py  test_ontology_event_publishing.py  test_ontology_type_management.py  test_query_service.py  test_redis_event_bus.py  test_rule_management.py  test_slack_integration.py  test_trigger_engine.py  test_visibility.py
tests/integration/agents/: test_chat_flow.py
tests/integration/evolution/: test_flow.py
tests/integration/storage/: test_embeddings.py  test_meilisearch.py  test_qdrant.py
tests/unit/: __init__.py  test_api.py  test_api_routers.py  test_context_capture.py  test_correlation_engine.py  test_decision_tracer.py  test_digest_email.py  test_evolution_layer.py  test_inference_engine.py  test_meili_worker.py  test_neo4j_worker.py  test_nudge_engine.py  test_qdrant_worker.py  test_reliability.py  test_worker_health.py
tools/browser-extension/: background.js  manifest.json  popup.html  popup.js
(+111 files in other folders)
