[project]
name = "orgmind"
version = "0.1.0"
description = "Context Graph Platform for Organizational Intelligence"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "OrgMind Team" }]

dependencies = [
    # ==========================================================================
    # WEB FRAMEWORK
    # ==========================================================================
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    
    # ==========================================================================
    # DATABASE ADAPTERS
    # ==========================================================================
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",  # PostgreSQL adapter
    "alembic>=1.13.0",  # Database migrations
    "duckdb>=0.9.0",
    "neo4j>=5.15.0",
    "qdrant-client>=1.7.0",
    "meilisearch>=0.31.0",
    "minio>=7.2.0",
    "redis>=5.0.0",
    "nats-py>=2.7.0",  # NATS JetStream for event bus
    
    # ==========================================================================
    # WORKFLOW ENGINE
    # ==========================================================================
    "temporalio>=1.4.0",
    
    # ==========================================================================
    # AI / LLM
    # ==========================================================================
    "openai>=1.10.0",
    "tiktoken>=0.5.0",
    "json-logic-qubit>=0.9.0",
    
    # ==========================================================================
    # OBSERVABILITY
    # ==========================================================================
    "structlog>=24.1.0",
    "python-json-logger>=2.0.0",
    "prometheus-client>=0.19.0",
    "opentelemetry-api>=1.22.0",
    "opentelemetry-sdk>=1.22.0",
    "opentelemetry-exporter-otlp>=1.22.0",
    "opentelemetry-instrumentation-fastapi>=0.43b0",
    "opentelemetry-instrumentation-httpx>=0.43b0",
    
    # ==========================================================================
    # UTILITIES
    # ==========================================================================
    "httpx>=0.26.0",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
    "jinja2>=3.1.0",
    "apscheduler>=3.10.0",
    "pypdf>=3.17.0",
    "pandas>=2.1.0",
    "uuid7>=0.1.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "httpx>=0.26.0",
    "testcontainers>=3.7.0",
    
    # Linting & Formatting
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    
    # Security
    "bandit>=1.7.0",
    
    # Type stubs
    "types-redis>=4.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# =============================================================================
# TOOLS CONFIGURATION
# =============================================================================

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument
    "B904",   # raise without from inside except
]

[tool.ruff.lint.isort]
known-first-party = ["orgmind"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
disallow_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["src/orgmind"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

# =============================================================================
# UV WORKSPACE (if using uv)
# =============================================================================
[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]
